# SecBrief

./: .dockerignore  .env.example  .gitignore  Dockerfile  HF_DEPLOY.md  PITCH.md  PPT_CONTENT.md  README.md  README_HF.md  SUBMISSION.md  SecBrief_MVP.docx  TRAE_PROMPT.md  pyproject.toml  pyrightconfig.json  test.sarif  test_attack.py  test_scan.py  test_upload.py
backend/: alert_parser.py  armoriq.yaml  armoriq_service.py  auth.py  cli_scanner.py  dashboard_router.py  db.py  export_service.py  github_scan_service.py  github_service.py  llm_service.py  main.py  osv_scanner.py  repo_scanner.py  requirements.txt  scan_enricher.py  secbrief_cli.py
backend/secbrief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/pulse/: layout.tsx  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChatPanel.tsx  ComplianceBar.tsx  Header.tsx  InputPanel.tsx  IntentReceiptCard.tsx  LandingPage.tsx  MarkdownLite.tsx  SecBriefLogo.tsx  SeverityBadge.tsx  TabBar.tsx  WorkflowBar.tsx
frontend/src/lib/: api.ts  types.ts
secbrief-action/: README.md  action.yml  package.json
secbrief-action/src/: index.js
