[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secbrief"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic[email]>=2.0.0",
  "python-multipart>=0.0.9",
]
llm = [
  "httpx>=0.27.0",
]
armoriq = [
  "armoriq-sdk>=0.1.0",
  "cryptography>=42.0.0",
]

[project.scripts]
secbrief = "secbrief_cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}
py-modules = [
  "alert_parser",
  "armoriq_service",
  "cli_scanner",
  "dashboard_router",
  "db",
  "export_service",
  "github_service",
  "llm_service",
  "main",
  "osv_scanner",
  "repo_scanner",
  "scan_enricher",
  "secbrief_cli",
]
